--- a/themes/educenter-hugo/layouts/mission/list.html
+++ b/themes/educenter-hugo/layouts/mission/list.html
@@ -5,22 +5,22 @@
   <div class="container">
     <div class="row mb-5">
       <div class="col-md-6 mb-4 mb-md-0">
-        <img class="img-fluid" src="{{ .Params.image | relURL }}" alt="scholarship news">
+        <img class="img-fluid" src="{{ .Params.image | relURL }}" alt="mission news">
       </div>
       <div class="col-md-6 content">
         {{ .Content }}
       </div>
     </div>
     <div class="row">
-      <!-- scholarship item -->
+      
       {{ range .Data.Pages }}
       <div class="col-lg-4 col-sm-6 mb-4">
-        {{ .Render "scholarship" }}
+        {{ .Render "mission" }}
       </div>
       {{ end }}
     </div>
   </div>
 </section>
-<!-- /scholarship -->
+
 
 {{ end }}
