--- a/themes/educenter-hugo/layouts/_default/list.html
+++ b/themes/educenter-hugo/layouts/_default/list.html
@@ -25,7 +25,7 @@
                   </li>
                 </ul>
                 <h4 class="card-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h4>
-                <p class="card-text">{{ .Summary | truncate 100 }}</p>
+                <p class="card-text">{{ .Summary }}</p>
                 <a href="{{ .Permalink }}" class="btn btn-primary btn-sm">{{ i18n "read_more" }}</a>
               </div>
             </article>
