--- a/themes/educenter-hugo/layouts/partials/header.html
+++ b/themes/educenter-hugo/layouts/partials/header.html
@@ -28,8 +28,10 @@
   <div class="navigation w-100 {{ if site.Params.top_header }} top-hider {{ end }}">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark p-0">
-        <a class="navbar-brand" href="{{ site.BaseURL | relLangURL }}"><img class="img-fluid logo"
-            src="{{ site.Params.logo | absURL }}" alt="{{ site.Title }}"></a>
+        <!-- <a class="navbar-brand" href="{{ site.BaseURL | relLangURL }}"><img class="img-fluid logo"
+            src="{{ site.Params.logo | absURL }}" alt="{{ site.Title }}"></a> -->
+        <a class="navbar-brand" href="{{ site.BaseURL | relLangURL }}"><img class="img-fluid logo-long"
+            src="/images/logo_long.png" alt="{{ site.Title }}"></a>
         <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navigation"
           aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
