List of Documents UPdate

--- a/themes/educenter-hugo/assets/scss/_common.scss
+++ b/themes/educenter-hugo/assets/scss/_common.scss
@@ -23,8 +23,7 @@ body {
   justify-content: center;
 }
 
-ol,
-ul {
+ul, ol {
   list-style-type: none;
   margin: 0px;
 }
@@ -43,7 +42,7 @@ img {
 
 .logo-long {
   width: 400px;
-  height: 81.6spx;
+  height: 81.6px;
 }
 
 a,
