--- a/themes/educenter-hugo/layouts/document/list.html
+++ b/themes/educenter-hugo/layouts/document/list.html
@@ -1,20 +1,20 @@
 {{ define "main" }}
 
-<!-- document -->
+<!-- notice -->
 <section class="section">
   <div class="container">
-    <!-- document list -->
-    <div class="row justify-content-center">
-      <!-- document item -->
-      {{ range .Data.Pages }}
-      <div class="col-lg-4 col-sm-6 mb-5">
-        {{ .Render "document" }}
+    <div class="row">
+      <div class="col-12">
+        <ol class="list-group list-group-numbered">
+          <!-- document item -->
+          {{ range .Data.Pages }}
+          {{ .Render "document" }}
+          {{ end }}
+        </ol>
       </div>
-      {{ end }}
     </div>
-    <!-- /document list -->
   </div>
 </section>
-<!-- /document -->
+<!-- /notice -->
 
 {{ end }}
