--- a/themes/educenter-hugo/assets/scss/_variables.scss
+++ b/themes/educenter-hugo/assets/scss/_variables.scss
@@ -12,6 +12,6 @@ $light: #f8f9fe;
 $gray: #f8f8f8;
 
 // Font Variables
-$primary-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", PingFang TC, Microsoft JhengHei UI, Microsoft JhengHei,sans-serif;
+$primary-font: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", PingFang TC, Microsoft JhengHei UI, Microsoft JhengHei,sans-serif;
 $secondary-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", PingFang TC, Microsoft JhengHei UI, Microsoft JhengHei,sans-serif;
 $icon-font: 'themify';
