Fix Document Format and List Order

--- a/themes/educenter-hugo/layouts/document/list.html
+++ b/themes/educenter-hugo/layouts/document/list.html
@@ -7,7 +7,7 @@
       <div class="col-8">
         <ol class="list-group">
           <!-- document item -->
-          {{ range .Data.Pages }}
+          {{ range sort .Data.Pages "Date" "asc"}}
           {{ .Render "document" }}
           {{ end }}
         </ol>
