--- a/themes/educenter-hugo/layouts/document/single.html
+++ b/themes/educenter-hugo/layouts/document/single.html
@@ -3,13 +3,13 @@
 <!-- section -->
 <section class="section-sm">
   <div class="container">
-    <div class="row">
-      <div class="col-12 mb-4">
+    <!-- <div class="row"> -->
+      <!-- <div class="col-12 mb-4"> -->
         <!-- course thumb -->
-        <img style="height: 500px;width: 100%;object-fit: cover;" src="{{ .Params.image | relURL }}"
-          class="img-fluid w-100">
-      </div>
-    </div>
+        <!-- <img style="height: 500px;width: 100%;object-fit: cover;" src="{{ .Params.image | relURL }}" -->
+          <!-- class="img-fluid w-100"> -->
+      <!-- </div> -->
+    <!-- </div> -->
     <!-- related_news -->
     <div class="row align-items-center mb-5">
       <!-- <h2>{{ .Title }}</h2> -->
