--- a/themes/educenter-hugo/assets/scss/_typography.scss
+++ b/themes/educenter-hugo/assets/scss/_typography.scss
@@ -29,6 +29,8 @@ h1,h2,h3,h4,h5,h6 {
   font-family: $secondary-font;
   font-weight: 700;
   line-height: 1.2;
+  padding-top: 25px;
+  padding-bottom: 10px;
 }
 
 h1, .h1{
