--- a/themes/educenter-hugo/assets/scss/_typography.scss
+++ b/themes/educenter-hugo/assets/scss/_typography.scss
@@ -29,8 +29,6 @@ h1,h2,h3,h4,h5,h6 {
   font-family: $secondary-font;
   font-weight: 700;
   line-height: 1.2;
-  padding-top: 25px;
-  padding-bottom: 10px;
 }
 
 h1, .h1{
@@ -78,4 +76,24 @@ h6, .h6{
 
 .subtitle{
   font-size: 24px;
+}
+
+.blog-post-content > h1 {
+  padding-top: 25px;
+  padding-bottom: 10px;
+}
+
+.blog-post-content > h2 {
+  padding-top: 25px;
+  padding-bottom: 10px;
+}
+
+.blog-post-content > h3 {
+  padding-top: 25px;
+  padding-bottom: 10px;
+}
+
+.blog-post-content > h4 {
+  padding-top: 25px;
+  padding-bottom: 10px;
 }
