--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,8 +42,13 @@
 }
 
 @layer base {
+  html {
+    overflow-x: hidden;
+  }
   body {
     background-color: #000;
     color: #fff;
+    width: 100%;
+    overflow-x: hidden;
   }
 }
